fixed table explorer readability issue when in corruptor mode

--- a/hadoop-2.8.5-src/hadoop-hdfs-project/hadoop-hdfs/src/main/webapps/hdfs/explorer.css
+++ b/hadoop-2.8.5-src/hadoop-hdfs-project/hadoop-hdfs/src/main/webapps/hdfs/explorer.css
@@ -71,3 +71,8 @@ body {
     color: white;
 
 }
+
+.table-dark-mode {
+    background-color: rgba(0, 0, 0, 0.6);
+    border-radius: 10px;
+}
